kubernetes-no-thanos.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: prometheus
  labels:
    app: prometheus
  annotations:
    kubernetes.io/ingress.class: "nginx"
    estafette.io/cloudflare-dns: "true"
    estafette.io/cloudflare-proxy: "true"
    estafette.io/cloudflare-hostnames: "${HOSTNAME}"
spec:
  tls:
  - hosts:
    - ${HOSTNAME}
    secretName: prometheus-letsencrypt-certificate
  rules:
  - host: ${HOSTNAME}
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: http
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: prometheus
  labels:
    app: prometheus
  annotations:
    prometheus.io/probe: "true"
    prometheus.io/probe-path: "/api/health"
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: prometheus
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-sts
  namespace: prometheus
  labels:
    app: prometheus
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: prometheus
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
  namespace: prometheus
  labels:
    app: prometheus
spec:
  replicas: 1
  revisionHistoryLimit: 10
  serviceName: prometheus-sts
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
        thanos-peer: "true"
      annotations:
        prometheus.io/scrape: "true"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - prometheus
              topologyKey: kubernetes.io/hostname
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 10
            preference:
              matchExpressions:
              - key: cloud.google.com/gke-preemptible
                operator: In
                values:
                - "true"
      serviceAccount: prometheus
      containers:
      - name: prometheus
        image: prom/prometheus:v2.6.0
        command: ["/bin/prometheus"]
        args: [
          "--config.file=/prometheus-config/prometheus.yaml.tmpl",
          "--storage.tsdb.path=/prometheus",
          "--storage.tsdb.retention=24h",
          "--storage.tsdb.min-block-duration=2h",
          "--storage.tsdb.max-block-duration=2h",
          "--web.enable-lifecycle",
          "--web.external-url=https://${HOSTNAME}/"
        ]
        securityContext:
          runAsUser: 0
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - mountPath: /prometheus
          name: prometheus-data
        - mountPath: /prometheus-config
          name: prometheus-config
        - mountPath: /prometheus-rules
          name: prometheus-rules
        ports:
        - name: http
          containerPort: 9090
        livenessProbe:
          httpGet:
            path: /-/healthy
            port: http
          initialDelaySeconds: 120
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /-/ready
            port: http
      volumes:
      - name: prometheus-config
        configMap:
          name: prometheus-config
      - name: prometheus-rules
        configMap:
          name: prometheus-rules
  volumeClaimTemplates:
  - metadata:
      name: prometheus-data
      namespace: prometheus
      labels:
        app: prometheus
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: standard
      resources:
        requests:
          storage: 1Gi
